[mod/adr/router] update route, action and responder for legal term creation

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -141,4 +141,4 @@ adminActions:
 adminLegalCreate:
     path: /admin/legal/create-legal
     defaults:
-        _controller: App\Action\Admin\AdminLegalAction
+        _controller: App\Action\Admin\AdminLegalCreateAction
