[add/router] adminLegal route

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -138,6 +138,11 @@ adminActions:
         id: \d+
         action: delete||upgrade||downgrade||validate||reject
 
+adminLegal:
+    path: /admin/legal
+    defaults:
+        _controller: App\Action\Admin\AdminLegalAction
+
 adminLegalCreate:
     path: /admin/legal/create-legal
     defaults:
