!! opitimization => replace native doctrine query by custom ones for term, patronage ad topic entities !!

--- a/config/mapping/Patronage.orm.yml
+++ b/config/mapping/Patronage.orm.yml
@@ -1,6 +1,7 @@
 App\Entity\Patronage:
     type: entity
     table: patronage
+    repositoryClass: App\Repository\PatronageRepository
     id:
         id:
             type: integer
